--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<div style="text-align: center;">
+  <a href=" https://mcqueen5258.github.io/McQueen/">个人简介</a>      
+  <a href="https://mcqueen5258.github.io/aikewebjiangzuo/">我的web讲座</a>    
+  <a href="https://mcqueen5258.github.io/zoshici/">我的诗词网站</a>
 <h1>诗词</h1>
 <img src="http://p1.ssl.qhmsg.com/t012383756fa4244c80.jpg" alt="一只仰卧着的萌猫">
 <p>《题都城南庄》</p>
